`make docs` GH Action: automatically update DB schema documentation files

--- a/schema/html/tables/appeals.html
+++ b/schema/html/tables/appeals.html
@@ -238,7 +238,7 @@ cellspacing="0">
     <tr>
       <td style="vertical-align: top; width: 1px;"><br>
       </td>
-      <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;legacy_opt_in_approved</td>
+      <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;homelessness</td>
       <td style="vertical-align: top; width: 10px;" class="highlightedrow"><br>
       </td>
 	  <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;bool<br>
@@ -251,10 +251,10 @@ cellspacing="0">
     <tr>
       <td style="vertical-align: top; width: 1px;"><br>
       </td>
-      <td style="vertical-align: top; width: 1px;" >&nbsp;&nbsp;original_hearing_request_type</td>
+      <td style="vertical-align: top; width: 1px;" >&nbsp;&nbsp;legacy_opt_in_approved</td>
       <td style="vertical-align: top; width: 10px;" ><br>
       </td>
-	  <td style="vertical-align: top; width: 1px;" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;varchar<br>
+	  <td style="vertical-align: top; width: 1px;" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;bool<br>
       </td>
       <td style="vertical-align: top; width: 1px;color: rgb(120, 0, 0);" ><br>
       </td>
@@ -264,7 +264,7 @@ cellspacing="0">
     <tr>
       <td style="vertical-align: top; width: 1px;"><br>
       </td>
-      <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;poa_participant_id</td>
+      <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;original_hearing_request_type</td>
       <td style="vertical-align: top; width: 10px;" class="highlightedrow"><br>
       </td>
 	  <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;varchar<br>
@@ -277,33 +277,7 @@ cellspacing="0">
     <tr>
       <td style="vertical-align: top; width: 1px;"><br>
       </td>
-      <td style="vertical-align: top; width: 1px;" >&nbsp;&nbsp;receipt_date</td>
-      <td style="vertical-align: top; width: 10px;" ><br>
-      </td>
-	  <td style="vertical-align: top; width: 1px;" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;date<br>
-      </td>
-      <td style="vertical-align: top; width: 1px;color: rgb(120, 0, 0);" ><br>
-      </td>
-      <td style="vertical-align: top;width: 100%;" ><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top; width: 1px;"><br>
-      </td>
-      <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;stream_docket_number</td>
-      <td style="vertical-align: top; width: 10px;" class="highlightedrow"><br>
-      </td>
-	  <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;varchar<br>
-      </td>
-      <td style="vertical-align: top; width: 1px;color: rgb(120, 0, 0);" class="highlightedrow"><br>
-      </td>
-      <td style="vertical-align: top;width: 100%;" class="highlightedrow"><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top; width: 1px;"><br>
-      </td>
-      <td style="vertical-align: top; width: 1px;" >&nbsp;&nbsp;stream_type</td>
+      <td style="vertical-align: top; width: 1px;" >&nbsp;&nbsp;poa_participant_id</td>
       <td style="vertical-align: top; width: 10px;" ><br>
       </td>
 	  <td style="vertical-align: top; width: 1px;" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;varchar<br>
@@ -316,7 +290,7 @@ cellspacing="0">
     <tr>
       <td style="vertical-align: top; width: 1px;"><br>
       </td>
-      <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;target_decision_date</td>
+      <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;receipt_date</td>
       <td style="vertical-align: top; width: 10px;" class="highlightedrow"><br>
       </td>
 	  <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;date<br>
@@ -329,33 +303,7 @@ cellspacing="0">
     <tr>
       <td style="vertical-align: top; width: 1px;"><br>
       </td>
-      <td style="vertical-align: top; width: 1px;" >&nbsp;&nbsp;updated_at</td>
-      <td style="vertical-align: top; width: 10px;" ><br>
-      </td>
-	  <td style="vertical-align: top; width: 1px;" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;timestamp<br>
-      </td>
-      <td style="vertical-align: top; width: 1px;color: rgb(120, 0, 0);" ><br>
-      </td>
-      <td style="vertical-align: top;width: 100%;" ><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top; width: 1px;"><br>
-      </td>
-      <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;uuid</td>
-      <td style="vertical-align: top; width: 10px;" class="highlightedrow"><br>
-      </td>
-	  <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;uuid<br>
-      </td>
-      <td style="vertical-align: top; width: 1px;color: rgb(120, 0, 0);" class="highlightedrow"><br>
-      </td>
-      <td style="vertical-align: top;width: 100%;" class="highlightedrow"><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top; width: 1px;"><br>
-      </td>
-      <td style="vertical-align: top; width: 1px;" >&nbsp;&nbsp;veteran_file_number</td>
+      <td style="vertical-align: top; width: 1px;" >&nbsp;&nbsp;stream_docket_number</td>
       <td style="vertical-align: top; width: 10px;" ><br>
       </td>
 	  <td style="vertical-align: top; width: 1px;" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;varchar<br>
@@ -368,14 +316,79 @@ cellspacing="0">
     <tr>
       <td style="vertical-align: top; width: 1px;"><br>
       </td>
-      <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;veteran_is_not_claimant</td>
+      <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;stream_type</td>
       <td style="vertical-align: top; width: 10px;" class="highlightedrow"><br>
       </td>
-	  <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;bool<br>
+	  <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;varchar<br>
       </td>
       <td style="vertical-align: top; width: 1px;color: rgb(120, 0, 0);" class="highlightedrow"><br>
       </td>
       <td style="vertical-align: top;width: 100%;" class="highlightedrow"><br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top; width: 1px;"><br>
+      </td>
+      <td style="vertical-align: top; width: 1px;" >&nbsp;&nbsp;target_decision_date</td>
+      <td style="vertical-align: top; width: 10px;" ><br>
+      </td>
+	  <td style="vertical-align: top; width: 1px;" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;date<br>
+      </td>
+      <td style="vertical-align: top; width: 1px;color: rgb(120, 0, 0);" ><br>
+      </td>
+      <td style="vertical-align: top;width: 100%;" ><br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top; width: 1px;"><br>
+      </td>
+      <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;updated_at</td>
+      <td style="vertical-align: top; width: 10px;" class="highlightedrow"><br>
+      </td>
+	  <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;timestamp<br>
+      </td>
+      <td style="vertical-align: top; width: 1px;color: rgb(120, 0, 0);" class="highlightedrow"><br>
+      </td>
+      <td style="vertical-align: top;width: 100%;" class="highlightedrow"><br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top; width: 1px;"><br>
+      </td>
+      <td style="vertical-align: top; width: 1px;" >&nbsp;&nbsp;uuid</td>
+      <td style="vertical-align: top; width: 10px;" ><br>
+      </td>
+	  <td style="vertical-align: top; width: 1px;" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;uuid<br>
+      </td>
+      <td style="vertical-align: top; width: 1px;color: rgb(120, 0, 0);" ><br>
+      </td>
+      <td style="vertical-align: top;width: 100%;" ><br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top; width: 1px;"><br>
+      </td>
+      <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;veteran_file_number</td>
+      <td style="vertical-align: top; width: 10px;" class="highlightedrow"><br>
+      </td>
+	  <td style="vertical-align: top; width: 1px;" class="highlightedrow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;varchar<br>
+      </td>
+      <td style="vertical-align: top; width: 1px;color: rgb(120, 0, 0);" class="highlightedrow"><br>
+      </td>
+      <td style="vertical-align: top;width: 100%;" class="highlightedrow"><br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top; width: 1px;"><br>
+      </td>
+      <td style="vertical-align: top; width: 1px;" >&nbsp;&nbsp;veteran_is_not_claimant</td>
+      <td style="vertical-align: top; width: 10px;" ><br>
+      </td>
+	  <td style="vertical-align: top; width: 1px;" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;bool<br>
+      </td>
+      <td style="vertical-align: top; width: 1px;color: rgb(120, 0, 0);" ><br>
+      </td>
+      <td style="vertical-align: top;width: 100%;" ><br>
       </td>
     </tr>
 
